Mise à jour pour construire appimage et amélioration CMakeLists.txt

--- a/src/resource.qrc
+++ b/src/resource.qrc
@@ -49,5 +49,7 @@
         <file>../Calculator/styles/dark.css</file>
         <file>../Calculator/styles/light.css</file>
         <file>../Calculator/index.html</file>
+        <file>../Images/dvkbuntu-easy-menu.svg</file>
+        <file>../src/dvkbuntu-easy-menu.desktop</file>
     </qresource>
 </RCC>
